Fixed calendar status jumping to new line on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -742,4 +742,9 @@ td{
     .wrap{
         height: 90%;
     }
+
+    #calendarStatus{
+        font-size: 27px;
+
+    }
 }
